# coc-cli-tool

./: Cargo.toml
src/: coc6.rs  dice.rs  main.rs
