[package]
name = "cocli"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["shunsuke takii <ebina4yaka@protonmail.com>"]
description = "A command line tool for generating Call Of Cthulhu RPG character stats."
repository = "https://github.com/ebina4yaka/coc-cli-tool"

[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
rand = "0.9.2"
